feat: Adding docs fix: Fixed missing docs chore: Revisioning some part of the queries chore: Unifing invitation accept/decline responses chore: Unifing dispute vote casting response
